refact(kitty_act): remove useless code and improve performance.